# voonix-api-etl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/raw/: 2025-06-15_earnings.json
helpers/: google_cloud_helper.py  logger.py  requests_helper.py
