[project]
name = "boosta-task"
version = "0.1.0"
description = "technical task for Boosta company"
authors = [
    {name = "vvk",email = "vladyslav.koval@raccoongang.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "google-cloud-bigquery (>=3.34.0,<4.0.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
